--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -12,6 +12,10 @@
   <link href='//fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900' rel='stylesheet'>
   <title>JTX</title>
   
+  <meta property="og:type" content="video"/>
+  <meta property="og:title" content="Site du JTX"/>
+  <meta property="og:description" content="Le site disruptif de l'assocation télévisuelle de l'École polytechnique, aka qui se branle"/>
+  <meta property="og:image" content="http://binet-jtx.com/videos/affiches/JTX%202016/logo%202016.png"/>
 
   
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
