--- a/videos/templates/stats.html
+++ b/videos/templates/stats.html
@@ -180,25 +180,11 @@
 
 <script type="text/javascript">
 
-function engarder10(liste){
- A = [];
- n = Math.ceil(liste.length/10);
- console.log(n);
- for(var i = 0; i < liste.length;i++){
- 	if (i%n == 0){
- 		A[i] = liste[i];
- 	}
- 	else{
- 		A[i] = null;
- 	}
- }
- return A;
 
-}
 
 var data = {
   // A labels array that can contain any sort of values
-  labels: engarder10([{% for k in vues_par_jour.1 %} "{{k}}", {% endfor %}]),
+  labels: [{% for k in vues_par_jour.1 %} "{{k}}", {% endfor %}],
   // Our series array that contains series objects or in this case series data arrays
   series: [
     [{% for k in vues_par_jour.0 %} {{k}}, {% endfor %}]
