--- a/videos/templates/stats.html
+++ b/videos/templates/stats.html
@@ -199,7 +199,7 @@ function engarder10(liste){
 
 var data = {
   // A labels array that can contain any sort of values
-  labels: engarder10[{% for k in vues_par_jour.1 %} "{{k}}", {% endfor %}],
+  labels: engarder10([{% for k in vues_par_jour.1 %} "{{k}}", {% endfor %}]),
   // Our series array that contains series objects or in this case series data arrays
   series: [
     [{% for k in vues_par_jour.0 %} {{k}}, {% endfor %}]
