enfin les stats nous quittent

--- a/videos/templates/stats.html
+++ b/videos/templates/stats.html
@@ -184,7 +184,7 @@ function engardern(liste,t){
  A = [];
  n = Math.ceil(liste.length/t);
  for(var i = 0; i < liste.length;i++){
- 	if ((jtliste.length - i - 1)%n == 0){
+ 	if ((liste.length - i - 1)%n == 0){
  		A[i] = liste[i];
  	}
  	else{
