photo le retour

--- a/videos/templates/facade.html
+++ b/videos/templates/facade.html
@@ -277,7 +277,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
             <div class="row">
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-2 col-sm-offset-3" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="{% static 'photos-jtxmen/valentin.jpg' %}" alt="Member Photo"/>
+                  <div class="team-image"><img src="{% static 'photos-jtxmen/valentin.JPG' %}" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Hi all</h5>
                       <p class="font-serif">On innove et on disrupte</p>
@@ -292,7 +292,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-2" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="{% static 'photos-jtxmen/maxime.jpg' %}" alt="Member Photo"/>
+                  <div class="team-image"><img src="{% static 'photos-jtxmen/maxime.JPG' %}" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Good day</h5>
                       <p class="font-serif">On innove et on disrupte</p>
@@ -307,7 +307,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-2" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="{% static 'photos-jtxmen/pl.jpg' %}" alt="Member Photo"/>
+                  <div class="team-image"><img src="{% static 'photos-jtxmen/pl.JPG' %}" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Good day</h5>
                       <p class="font-serif">On innove et on disrupte</p>
@@ -324,7 +324,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
             <div class="row">
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-2" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="{% static 'photos-jtxmen/matthieu.jpg' %}" alt="Member Photo"/>
+                  <div class="team-image"><img src="{% static 'photos-jtxmen/matthieu.JPG' %}" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Hi all</h5>
                       <p class="font-serif">On innove et on disrupte</p>
@@ -339,7 +339,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-2" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="{{% static 'photos-jtxmen/nicolas.jpg' %}" alt="Member Photo"/>
+                  <div class="team-image"><img src="{{% static 'photos-jtxmen/nicolas.JPG' %}" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Good day</h5>
                       <p class="font-serif">On innove et on disrupte</p>
@@ -354,7 +354,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-2" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="{% static 'photos-jtxmen/nicolet.jpg' %}" alt="Member Photo"/>
+                  <div class="team-image"><img src="{% static 'photos-jtxmen/nicolet.JPG' %}" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Good day</h5>
                       <p class="font-serif">On innove et on disrupte</p>
@@ -369,7 +369,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-2" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="{% static 'photos-jtxmen/guillaumes.jpg' %}" alt="Member Photo"/>
+                  <div class="team-image"><img src="{% static 'photos-jtxmen/guillaumes.JPG' %}" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Good day</h5>
                       <p class="font-serif">On innove et on disrupte</p>
@@ -384,7 +384,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-2" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="{% static 'photos-jtxmen/arthur.jpg' %}" alt="Member Photo"/>
+                  <div class="team-image"><img src="{% static 'photos-jtxmen/arthur.JPG' %}" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Hello</h5>
                       <p class="font-serif">On innove et on disrupte</p>
@@ -399,7 +399,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-2" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="{% static 'photos-jtxmen/lorenzo.jpg' %}" alt="Member Photo"/>
+                  <div class="team-image"><img src="{% static 'photos-jtxmen/lorenzo.JPG' %}" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Yes, it's me</h5>
                       <p class="font-serif">On innove et on disrupte</p>
@@ -416,7 +416,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
             <div class="row">
                <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-2" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="{% static 'photos-jtxmen/jacques.jpg' %}" alt="Member Photo"/>
+                  <div class="team-image"><img src="{% static 'photos-jtxmen/jacques.JPG' %}" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Hi all</h5>
                       <p class="font-serif">On innove et on disrupte</p>
@@ -431,7 +431,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-2" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="{% static 'photos-jtxmen/ulysse.jpg' %}" alt="Member Photo"/>
+                  <div class="team-image"><img src="{% static 'photos-jtxmen/ulysse.JPG' %}" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Good day</h5>
                       <p class="font-serif">On innove et on disrupte</p>
@@ -446,7 +446,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-2" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="{% static 'photos-jtxmen/abdollah.jpg' %}" alt="Member Photo"/>
+                  <div class="team-image"><img src="{% static 'photos-jtxmen/abdollah.JPG' %}" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Good day</h5>
                       <p class="font-serif">On innove et on disrupte</p>
@@ -461,7 +461,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-2" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="{% static 'photos-jtxmen/fmf.jpg' %}" alt="Member Photo"/>
+                  <div class="team-image"><img src="{% static 'photos-jtxmen/fmf.JPG' %}" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Good day</h5>
                       <p class="font-serif">On innove et on disrupte</p>
@@ -476,7 +476,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-2" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="{% static 'photos-jtxmen/theo.jpg' %}" alt="Member Photo"/>
+                  <div class="team-image"><img src="{% static 'photos-jtxmen/theo.JPG' %}" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Hello</h5>
                       <p class="font-serif">On innove et on disrupte</p>
@@ -491,7 +491,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-2" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="{% static 'photos-jtxmen/benoit.jpg' %}" alt="Member Photo"/>
+                  <div class="team-image"><img src="{% static 'photos-jtxmen/benoit.JPG' %}" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Yes, it's me</h5>
                       <p class="font-serif">On innove et on disrupte</p>
@@ -508,7 +508,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
             <div class="row">
                <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-2" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="{% static 'photos-jtxmen/meryem.jpg' %}" alt="Member Photo"/>
+                  <div class="team-image"><img src="{% static 'photos-jtxmen/meryem.JPG' %}" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Hi all</h5>
                       <p class="font-serif">On innove et on disrupte</p>
@@ -523,7 +523,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-2" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="{% static 'photos-jtxmen/basile.jpg' %}" alt="Member Photo"/>
+                  <div class="team-image"><img src="{% static 'photos-jtxmen/basile.JPG' %}" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Good day</h5>
                       <p class="font-serif">On innove et on disrupte</p>
@@ -538,7 +538,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-2" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="{% static 'photos-jtxmen/charles.jpg' %}" alt="Member Photo"/>
+                  <div class="team-image"><img src="{% static 'photos-jtxmen/charles.JPG' %}" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Good day</h5>
                       <p class="font-serif">On innove et on disrupte</p>
@@ -553,7 +553,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-2" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="{% static 'photos-jtxmen/lucas.jpg' %}" alt="Member Photo"/>
+                  <div class="team-image"><img src="{% static 'photos-jtxmen/lucas.JPG' %}" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Good day</h5>
                       <p class="font-serif">On innove et on disrupte</p>
@@ -568,7 +568,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-2" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="{% static 'photos-jtxmen/guillaumem.jpg' %}" alt="Member Photo"/>
+                  <div class="team-image"><img src="{% static 'photos-jtxmen/guillaumem.JPG' %}" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Hello</h5>
                       <p class="font-serif">On innove et on disrupte</p>
@@ -583,7 +583,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
               </div>
               <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-2" onclick="wow fadeInUp">
                 <div class="team-item">
-                  <div class="team-image"><img src="{% static 'photos-jtxmen/mark.jpg' %}" alt="Member Photo"/>
+                  <div class="team-image"><img src="{% static 'photos-jtxmen/mark.JPG' %}" alt="Member Photo"/>
                     <div class="team-detail">
                       <h5 class="font-alt">Yes, it's me</h5>
                       <p class="font-serif">On innove et on disrupte</p>
