--- a/videos/templates/facade.html
+++ b/videos/templates/facade.html
@@ -281,7 +281,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                     <div class="team-detail">
                       <h5 class="font-alt">Notre Devise</h5>
                       <p class="font-serif">On innove et on disrupte</p>
-                     
+                     </div>
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">Valentin Delachaux</div>
@@ -295,7 +295,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                     <div class="team-detail">
                       <h5 class="font-alt">Notre Devise</h5>
                       <p class="font-serif">On innove et on disrupte</p>
-                     
+                    </div> 
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">Maxime Fabre</div>
@@ -309,7 +309,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                     <div class="team-detail">
                       <h5 class="font-alt">Notre Devise</h5>
                       <p class="font-serif">On innove et on disrupte</p>
-                     
+                    </div> 
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">Pierre-Louis Pousse</div>
@@ -325,7 +325,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                     <div class="team-detail">
                       <h5 class="font-alt">Notre Devise</h5>
                       <p class="font-serif">On innove et on disrupte</p>
-                     
+                    </div> 
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">Mathieu Royer-Piéchaud</div>
@@ -339,7 +339,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                     <div class="team-detail">
                       <h5 class="font-alt">Notre Devise</h5>
                       <p class="font-serif">On innove et on disrupte</p>
-                     
+                    </div> 
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">Nicolas Zucchet</div>
@@ -353,7 +353,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                     <div class="team-detail">
                       <h5 class="font-alt">Notre devise</h5>
                       <p class="font-serif">On innove et on disrupte</p>
-                     
+                    </div> 
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">Baptiste Niccolet</div>
@@ -367,7 +367,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                     <div class="team-detail">
                       <h5 class="font-alt">Notre Devise</h5>
                       <p class="font-serif">On innove et on disrupte</p>
-                     
+                    </div> 
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">Guillaume Solignac</div>
@@ -381,7 +381,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                     <div class="team-detail">
                       <h5 class="font-alt">Notre Devise</h5>
                       <p class="font-serif">On innove et on disrupte</p>
-                     
+                    </div> 
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">Arthur Toussaint</div>
@@ -395,7 +395,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                     <div class="team-detail">
                       <h5 class="font-alt">Notre Devise</h5>
                       <p class="font-serif">On innove et on disrupte</p>
-                     
+                    </div> 
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">Lorenzo Laurent</div>
@@ -411,7 +411,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                     <div class="team-detail">
                       <h5 class="font-alt">Notre Devise</h5>
                       <p class="font-serif">On innove et on disrupte</p>
-                     
+                    </div> 
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">Jacques Song</div>
@@ -425,7 +425,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                     <div class="team-detail">
                       <h5 class="font-alt">Notre Devise</h5>
                       <p class="font-serif">On innove et on disrupte</p>
-                     
+                    </div> 
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">Ulysse Vitoux</div>
@@ -439,7 +439,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                     <div class="team-detail">
                       <h5 class="font-alt">Notre Devise</h5>
                       <p class="font-serif">On innove et on disrupte</p>
-                     
+                    </div> 
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">Abdollah Ridah</div>
@@ -453,7 +453,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                     <div class="team-detail">
                       <h5 class="font-alt">Notre Devise</h5>
                       <p class="font-serif">On innove et on disrupte</p>
-                     
+                    </div> 
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">François-Marie Frank</div>
@@ -467,7 +467,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                     <div class="team-detail">
                       <h5 class="font-alt">Notre Devise</h5>
                       <p class="font-serif">On innove et on disrupte</p>
-                     
+                    </div> 
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">Théo Mondoux</div>
@@ -481,7 +481,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                     <div class="team-detail">
                       <h5 class="font-alt">Notre Devise</h5>
                       <p class="font-serif">On innove et on disrupte</p>
-                     
+                    </div> 
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">Benoît Durand</div>
@@ -497,7 +497,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                     <div class="team-detail">
                       <h5 class="font-alt">Notre Devise</h5>
                       <p class="font-serif">On innove et on disrupte</p>
-                     
+                    </div> 
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">Meryem Benmahdi</div>
@@ -511,7 +511,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                     <div class="team-detail">
                       <h5 class="font-alt">Notre Devise</h5>
                       <p class="font-serif">On innove et on disrupte</p>
-                     
+                    </div> 
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">Basile Verdeau</div>
@@ -525,7 +525,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                     <div class="team-detail">
                       <h5 class="font-alt">Notre Devise</h5>
                       <p class="font-serif">On innove et on disrupte</p>
-                     
+                    </div> 
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">Charles Cougoureux</div>
@@ -539,7 +539,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                     <div class="team-detail">
                       <h5 class="font-alt">Notre Devise</h5>
                       <p class="font-serif">On innove et on disrupte</p>
-                     
+                    </div> 
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">Lucas De Lara</div>
@@ -553,7 +553,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                     <div class="team-detail">
                       <h5 class="font-alt">Notre Devise</h5>
                       <p class="font-serif">On innove et on disrupte</p>
-                     
+                    </div> 
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">Guillaume Mianné</div>
@@ -567,7 +567,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                     <div class="team-detail">
                       <h5 class="font-alt">Notre Devise</h5>
                       <p class="font-serif">On innove et on disrupte</p>
-                     
+                    </div> 
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">Mark Sandal</div>
