--- a/videos/templates/facade.html
+++ b/videos/templates/facade.html
@@ -83,7 +83,7 @@
               <li><a href="#totop">Accueil</a></li>
               <li><a class="section-scroll" href="#services">Services</a></li>
               <li><a class="section-scroll" href="#works">Portfolio</a></li>
-              <li><a class="section-scroll" href="#team"<>Team</a></li>
+              <li><a class="section-scroll" href="#team"<>Equipe</a></li>
               <li><a class="section-scroll" href="#contact">Contact</a></li>
               <li><a class="section-scroll" href="/org">Accès polytechnicien</a></li>
             </ul>
