favicon + fin facade

--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -31,13 +31,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon.png' %}">
   <link href='//fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900' rel='stylesheet'>
-  <title>JTX</title>
+  <title>Binet JTX | Association télévisuelle de l'Ecole polytechnique</title>
   
   <meta property="og:type" content="video"/>
-  <meta property="og:title" content="Site du JTX"/>
-  <meta property="og:description" content="Le site disruptif de l'assocation télévisuelle de l'École polytechnique, aka qui se branle"/>
+  <meta property="og:title" content="Binet JTX"/>
+  <meta property="og:description" content="Binet JTX | assocation télévisuelle de l'École polytechnique"/>
   <meta property="og:image" content="http://binet-jtx.com/videos/affiches/JTX%202016/logo%202016.png"/>
 
   
