--- a/videos/templates/facade.html
+++ b/videos/templates/facade.html
@@ -10,13 +10,17 @@
     Document Title
     =============================================
     -->
-    <title>JTX | Association télévisuelle de l'Ecole polytechnique </title>
+    <title>Binet JTX | Association télévisuelle de l'Ecole polytechnique</title>
     <!--  
     Favicons
     =============================================
     -->
 
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/TRUC.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon.png' %}">
+    <meta property="og:type" content="video"/>
+    <meta property="og:title" content="Binet JTX"/>
+    <meta property="og:description" content="Binet JTX - assocation télévisuelle de l'École polytechnique"/>
+    <meta property="og:image" content="http://binet-jtx.com/videos/affiches/JTX%202016/logo%202016.png"/>
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="assets/images/favicons/ms-icon-144x144.png">
