photo de groupe

--- a/videos/templates/facade.html
+++ b/videos/templates/facade.html
@@ -533,7 +533,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
                   </div>
                   <div class="team-descr font-alt">
                     <div class="team-name">Charles Cougoureux</div>
-                    <div class="team-role">Humour</div>
+                    <div class="team-role">Humour et bon goût</div>
                   </div>
                 </div>
               </div>
@@ -583,7 +583,7 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
           </div>
         </section>
         
-                <section class="module bg-dark-60" data-background="{% static 'assets/images/section-3.jpg' %}">
+                <section class="module bg-dark-60" data-background="/videos/photogroupe.jpg">
           <div class="container">
             <div class="row">
               <div class="col-sm-6 col-sm-offset-3">
